Added sequelize to package.json

--- a/package.json
+++ b/package.json
@@ -3,25 +3,26 @@
   "version": "1.0.0",
   "engines": {
     "node": "8.9.3"
-    },
+  },
   "description": "A general discord bot made in discord.js",
   "main": "yuga.js",
   "dependencies": {
-    "discord.js": "hydrabolt/discord.js",
     "bufferutil": "^3.0.2",
+    "discord.js": "hydrabolt/discord.js",
+    "dotenv": "4.0.0",
     "eslint": "^4.6.1",
+    "google-translate-api": "2.3.0",
     "libsodium-wrappers": "^0.5.2",
-    "opusscript": "^0.0.3",
-    "uws": "^8.14.1",
-    "ytdl-core": "^0.18.1",
-    "urban.js": "2.4.3",
     "moment": "2.19.4",
     "moment-duration-format": "2.0.1",
-    "google-translate-api": "2.3.0",
-    "dotenv": "4.0.0",
-    "sqlite": "2.9.0",
+    "opusscript": "^0.0.3",
     "quick.db": "3.0.3",
-    "superagent": "3.8.2"
+    "sequelize": "^4.28.6",
+    "sqlite": "2.9.0",
+    "superagent": "3.8.2",
+    "urban.js": "2.4.3",
+    "uws": "^8.14.1",
+    "ytdl-core": "^0.18.1"
   },
   "devDependencies": {},
   "scripts": {
