--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "discord.js": "hydrabolt/discord.js",
     "dotenv": "4.0.0",
     "eslint": "^4.6.1",
+    "erlpack": "discordapp/erlpack",
     "google-translate-api": "2.3.0",
     "libsodium-wrappers": "^0.5.2",
     "moment": "2.19.4",
     "moment-duration-format": "2.0.1",
     "opusscript": "^0.0.3",
+    "pg": "6.0.0",
+    "pg-hstore": "2.3.2",
     "sequelize": "^4.28.6",
     "superagent": "3.8.2",
     "urban.js": "2.4.3",
     "uws": "^8.14.1",
-    "ytdl-core": "^0.18.1"
+    "ytdl-core": "^0.18.1",
+    "zlib-sync": "0.1.4"
   },
   "devDependencies": {},
   "scripts": {
