Reworking YT comand

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ytdl-core": "0.18.5",
     "zlib-sync": "0.1.4",
     "ffmpeg-binaries": "3.2.2-3",
-    "youtube-search": "1.0.10"
+    "simple-youtube-api": "5.0.0"
   },
   "devDependencies": {},
   "scripts": {
