--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
     "bufferutil": "^3.0.2",
     "discord.js": "hydrabolt/discord.js",
     "dotenv": "4.0.0",
-    "eslint": "^4.6.1",
     "erlpack": "discordapp/erlpack",
+    "eslint": "^4.6.1",
+    "ffmpeg-binaries": "3.2.2-3",
+    "functions": "file:src/functions/functions-1.0.0.tgz",
     "google-translate-api": "2.3.0",
     "libsodium-wrappers": "^0.5.2",
     "moment": "2.19.4",
-    "pg":"latest",
     "moment-duration-format": "2.0.1",
     "opusscript": "0.0.6",
+    "pg": "latest",
+    "simple-youtube-api": "5.0.0",
     "superagent": "3.8.2",
     "urban.js": "2.4.3",
     "uws": "^8.14.1",
     "ytdl-core": "0.18.5",
-    "zlib-sync": "0.1.4",
-    "ffmpeg-binaries": "3.2.2-3",
-    "simple-youtube-api": "5.0.0"
+    "zlib-sync": "0.1.4"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node yuga.js",
-    "start": "node yuga.js"
+    "test": "node index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
