--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "main": "yuga.js",
   "dependencies": {
     "bufferutil": "^3.0.2",
-    "db": "file:src/db/db-1.0.0.tgz",
+    "db": "file:db/db-1.0.0.tgz",
     "discord.js": "hydrabolt/discord.js",
     "dotenv": "4.0.0",
     "erlpack": "discordapp/erlpack",
     "eslint": "^4.6.1",
     "ffmpeg-binaries": "3.2.2-3",
-    "functions": "file:src/functions/functions-1.0.0.tgz",
+    "functions": "file:functions/functions-1.0.0.tgz",
     "google-translate-api": "2.3.0",
     "libsodium-wrappers": "^0.5.2",
     "moment": "2.19.4",
