--- a/package.json
+++ b/package.json
@@ -8,13 +8,10 @@
   "main": "yuga.js",
   "dependencies": {
     "bufferutil": "^3.0.2",
-    "db": "file:db/db-1.0.0.tgz",
     "discord.js": "hydrabolt/discord.js",
-    "dotenv": "4.0.0",
     "erlpack": "discordapp/erlpack",
     "eslint": "^4.6.1",
     "ffmpeg-binaries": "3.2.2-3",
-    "functions": "file:functions/functions-1.0.0.tgz",
     "google-translate-api": "2.3.0",
     "libsodium-wrappers": "^0.5.2",
     "moment": "2.19.4",
@@ -26,6 +23,8 @@
     "urban.js": "2.4.3",
     "uws": "^8.14.1",
     "ytdl-core": "0.18.5",
+    "yugadb": "file:db/yugadb-1.0.0.tgz",
+    "yugafunctions": "file:functions/yugafunctions-1.0.1.tgz",
     "zlib-sync": "0.1.4"
   },
   "devDependencies": {},
