--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "moment": "2.19.4",
     "moment-duration-format": "2.0.1",
     "opusscript": "0.0.6",
-    "pg": "latest",
+    "pg": "7.4.1",
+    "pgpromise": "0.1.1",
     "simple-youtube-api": "5.0.0",
     "superagent": "3.8.2",
     "urban.js": "2.4.3",
