--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "libsodium-wrappers": "^0.5.2",
     "moment": "2.19.4",
     "moment-duration-format": "2.0.1",
-    "opusscript": "0.0.6",
+    "node-opus": "0.2.7",
     "pg": "7.4.1",
     "pgpromise": "0.1.1",
     "simple-youtube-api": "5.0.0",
