--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,9 @@ language: node_js
 node_js:
   "7"
 
+notifications:
+  email:
+    recipients:
+      - zzstrikerzzyt@gmail.com
+    on_success: never 
+    on_failure: always 
