--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
   "8"
-script: npm test && npm run beautify
+script: npm test
 notifications:
   email:
     recipients:
