--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "yuga.js",
   "dependencies": {
     "bufferutil": "^3.0.2",
+    "common-tags": "^1.7.2",
     "discord.js": "discordjs/discord.js",
     "erlpack": "discordapp/erlpack",
     "eslint": "^4.17.0",
