--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "2.19.4",
     "moment-duration-format": "2.0.1",
     "node-opus": "0.2.7",
+    "quick-gist": "1.4.0",
     "simple-youtube-api": "5.0.0",
     "superagent": "3.8.2",
     "urban.js": "2.4.3",
