--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "ajv": "^6.1.1",
     "bufferutil": "^3.0.2",
     "common-tags": "^1.7.2",
-    "create-gist": "1.0.0",
     "discord.js": "discordjs/discord.js",
     "erlpack": "discordapp/erlpack",
     "eslint": "^4.17.0",
@@ -23,6 +22,7 @@
     "moment": "2.19.4",
     "moment-duration-format": "2.0.1",
     "node-opus": "0.2.7",
+    "pastebin-js": "^0.5.1",
     "simple-youtube-api": "5.0.0",
     "superagent": "3.8.2",
     "urban.js": "2.4.3",
