--- a/package.json
+++ b/package.json
@@ -8,17 +8,12 @@
   "main": "yuga.js",
   "dependencies": {
     "ajv": "^6.1.1",
-    "bufferutil": "^3.0.2",
+    "animals-api": "^1.0.1",
     "common-tags": "^1.7.2",
-    "discord.js": "discordjs/discord.js",
-    "erlpack": "discordapp/erlpack",
+    "discord.js": "github:discordjs/discord.js",
     "eslint": "^4.17.0",
-    "eslint-plugin-es-beautifier": "^1.0.1",
     "ffmpeg-binaries": "3.2.2-3",
-    "google-translate-api": "2.3.0",
-    "js-beautify": "^1.7.5",
     "kaori": "^1.1.4",
-    "libsodium-wrappers": "^0.5.2",
     "moment": "2.19.4",
     "moment-duration-format": "2.0.1",
     "node-opus": "0.2.7",
@@ -26,9 +21,7 @@
     "simple-youtube-api": "5.0.0",
     "superagent": "3.8.2",
     "urban.js": "2.4.3",
-    "uws": "^8.14.1",
-    "ytdl-core": "0.20.1",
-    "zlib-sync": "0.1.4"
+    "ytdl-core": "0.20.1"
   },
   "devDependencies": {},
   "scripts": {
